--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'QL'
 - !lcc 'QH'
 - !lcsh 'Tympanuchus'
+- GITenberg
 title: Variation in the Muscles and Nerves of the Leg in Two Genera of Grouse (Tympanuchus
   and Pedioecetes)
 url: http://www.gutenberg.org/ebooks/41812
